<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScannerSetActivity">

    <TextView
        android:id="@+id/scanner_set_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="22.5dp"
        android:text="@string/scanner_set"
        android:textColor="#FF595959"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="50dp"
        android:background="#666666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/scanner_set_tv"
        app:layout_constraintTop_toBottomOf="@+id/scanner_set_tv" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="82dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/view1"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@+id/view1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/scan_pattern_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:onClick="scanPatternCl">

                <TextView
                    style="@style/scanner_set_tv"
                    android:text="@string/scan_pattern"
                    android:textColor="#FF595959"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/scan_pattern_tv"
                    style="@style/scanner_set_tv"
                    android:text="@string/scan_one_paper_pattern"
                    android:textColor="#FF1890FF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="#999999"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scan_pattern_tv" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/scan_color_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:onClick="scanColorCl">

                <TextView
                    style="@style/scanner_set_tv"
                    android:text="@string/scan_color"
                    android:textColor="#FF595959"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/scan_color_tv"
                    style="@style/scanner_set_tv"
                    android:text="@string/color"
                    android:textColor="#FF1890FF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="#999999"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scan_color_tv" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/scan_format_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp">

                <TextView
                    style="@style/scanner_set_tv"
                    android:text="@string/format"
                    android:textColor="#FF595959"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/scan_format_tv"
                    style="@style/scanner_set_tv"
                    android:text="@string/jpeg"
                    android:textColor="#FF1890FF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="#999999"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scan_format_tv" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/scan_quality_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:onClick="scanQualityCl"
                android:layout_marginEnd="50dp">

                <TextView
                    style="@style/scanner_set_tv"
                    android:text="@string/quality"
                    android:textColor="#FF595959"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/scan_quality_tv"
                    style="@style/scanner_set_tv"
                    android:text="@string/qualityStandard"
                    android:textColor="#FF1890FF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="#999999"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scan_quality_tv" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp">

                <TextView
                    style="@style/scanner_set_tv"
                    android:text="@string/correct_prejudiced"
                    android:textColor="#FF595959"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/scan_correct_prejudiced_cb"
                    android:layout_width="21dp"
                    android:layout_height="11dp"
                    android:background="@drawable/scanner_set_check"
                    android:button="@null"
                    android:checked="false"
                    android:textColor="#FF1890FF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="#999999"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scan_correct_prejudiced_cb" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp">

                <TextView
                    style="@style/scanner_set_tv"
                    android:text="@string/tailor"
                    android:textColor="#FF595959"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/scan_tailor_cb"
                    android:layout_width="21dp"
                    android:layout_height="11dp"
                    android:background="@drawable/scanner_set_check"
                    android:button="@null"
                    android:checked="false"
                    android:textColor="#FF1890FF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="#999999"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scan_tailor_cb" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp">

                <TextView
                    style="@style/scanner_set_tv"
                    android:text="@string/two_detection"
                    android:textColor="#FF595959"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/scan_two_detection_cb"
                    android:layout_width="21dp"
                    android:layout_height="11dp"
                    android:background="@drawable/scanner_set_check"
                    android:button="@null"
                    android:checked="false"
                    android:textColor="#FF1890FF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="#999999"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scan_two_detection_cb" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp">

                <TextView
                    style="@style/scanner_set_tv"
                    android:text="@string/blank_paper"
                    android:textColor="#FF595959"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/scan_blank_paper_cb"
                    android:layout_width="21dp"
                    android:layout_height="11dp"
                    android:background="@drawable/scanner_set_check"
                    android:button="@null"
                    android:checked="false"
                    android:textColor="#FF1890FF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="#999999"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scan_blank_paper_cb" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/paper_size"
                    android:textColor="#FF595959"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/scan_paper_size_sp"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="#999999"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scan_paper_size_sp" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/confirm"
        android:layout_width="44dp"
        android:layout_height="20dp"
        android:layout_marginStart="94dp"
        android:background="#1890FF"
        android:text="@string/confirm"
        android:textColor="#FFFFFF"
        android:textSize="9.5sp"
        android:onClick="confirmBt"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="44dp"
        android:layout_height="20dp"
        android:layout_marginEnd="94dp"
        android:background="@drawable/button_cancel"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="9.5sp"
        android:onClick="cancelBt"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</android.support.constraint.ConstraintLayout>