<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bar"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:background="#F7F7F7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/clear_bt"
            style="@style/scan_select_bt_item"
            android:layout_marginTop="61dp"
            android:background="@drawable/button_bg"
            android:drawableStart="@mipmap/clear_off"
            android:onClick="chearBt"
            android:text="@string/clear_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/restoration_bt"
            style="@style/scan_select_bt_item"
            android:background="@drawable/button_bg"
            android:drawableStart="@mipmap/restoration_off"
            android:onClick="restorationBt"
            android:text="@string/restoration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear_bt" />

        <Button
            android:id="@+id/paper_bt"
            style="@style/scan_select_bt_item"
            android:background="@drawable/button_bg"
            android:drawableStart="@mipmap/paper_off"
            android:onClick="paperBt"
            android:text="@string/paper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restoration_bt" />

        <Button
            android:id="@+id/scanner_bt"
            style="@style/scan_select_bt_item"
            android:background="@drawable/button_bg"
            android:drawableStart="@mipmap/scanner_off"
            android:onClick="scannerBt"
            android:text="@string/scanner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paper_bt" />

        <Button
            android:id="@+id/set_bt"
            style="@style/scan_select_bt_item"
            android:drawableStart="@mipmap/set_off"
            android:onClick="setBt"
            android:text="@string/set"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scanner_bt" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bar"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="77dp"
            android:src="@mipmap/printer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/start_scan_ll"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:background="#0A000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:orientation="horizontal"
            android:onClick="startScanLl"
            android:gravity="center">
            <ImageView
                android:id="@+id/start_scan_iv"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@mipmap/scanner_gray"/>

            <TextView
                android:id="@+id/start_scan_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="放入纸张"
                android:textColor="#40000000"
                android:textSize="10sp"
                android:layout_marginLeft="6dp"/>
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>